[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/font_64.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/ui/menu/MenuItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/menu/MenuSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu/PlayerControlsSlider.gd" type="Script" id=4]

[node name="PlayerControlsSlider" type="Node2D"]
script = ExtResource( 4 )

[node name="MenuSlider" parent="." instance=ExtResource( 3 )]

[node name="Label" parent="MenuSlider/Slider/LabelRoot" index="0"]
text = "Player 1"

[node name="Keyboard" parent="MenuSlider/Slider/MenuController" index="0" instance=ExtResource( 2 )]
position = Vector2( -180, 0 )

[node name="Label" type="Label" parent="MenuSlider/Slider/MenuController/Keyboard"]
margin_left = 0.0112305
margin_top = 20.0
margin_right = 1120.01
margin_bottom = 121.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Keyboard"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gamepad" parent="MenuSlider/Slider/MenuController" index="1" instance=ExtResource( 2 )]
position = Vector2( -180, 140 )

[node name="Label" type="Label" parent="MenuSlider/Slider/MenuController/Gamepad"]
margin_top = 20.0
margin_right = 1120.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gamepad"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamepadConfiguration" parent="MenuSlider/Slider/MenuController" index="2" instance=ExtResource( 2 )]
position = Vector2( -179.989, 280 )
enabled = false

[node name="Label" type="Label" parent="MenuSlider/Slider/MenuController/GamepadConfiguration"]
margin_top = 20.0
margin_right = 1120.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gamepad Configuration"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackLabel" parent="MenuSlider/Slider" index="4"]
position = Vector2( -280, 0 )
[connection signal="activated" from="MenuSlider/Slider/MenuController/Keyboard" to="." method="_on_Keyboard_activated"]
[connection signal="activated" from="MenuSlider/Slider/MenuController/Gamepad" to="." method="_on_Gamepad_activated"]
[connection signal="activated" from="MenuSlider/Slider/MenuController/GamepadConfiguration" to="." method="_on_GamepadConfiguration_activated"]

[editable path="MenuSlider"]
